新版本 升级so库

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,6 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-//    implementation project(path: ':scancode')
-    implementation 'com.github.MZCretin:ScanCode:v1.0.0'
+    implementation project(path: ':scancode')
+//    implementation 'com.github.MZCretin:ScanCode:v1.0.0' //不支持64位so库
 }
