--- a/scancode/build.gradle
+++ b/scancode/build.gradle
@@ -34,5 +34,5 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    implementation files('libs/zbardecoder.jar')
+    api 'cn.bingoogolapple:bga-qrcode-zbar:1.3.7'
 }
